--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,12 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    dependencies {
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.40.1'
+        def nav_version = "2.5.0-rc01"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+    }
+}
+
 plugins {
     id 'com.android.application' version '7.4.0-alpha02' apply false
     id 'com.android.library' version '7.4.0-alpha02' apply false
